tests/paczka1/fuzzy1/11708801.err
Error in line 1: boMbXCfD7 S189 29,2
Error in line 9: S189 S439 52,9
Error in line 11: VzwiMmThm A811 33,5
Error in line 16: VzwiMmThm S189 85,1
Error in line 2: TZJ5n S439 0,7
Error in line 19: 8yJqEicVUQT A811 90,1
Error in line 18: TZJ5n S189 60,6
Error in line 8: 1kFfym S189 7,2
